--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="CSS.css">
 </head>
 <header>
@@ -16,7 +17,7 @@
    <h3>Zach Morris</h3>
    <button id="MainButton">My Projects</button>
  </section>
- <section class="Gallery">
+ <section class="Gallery1">
    <div class="Gall1">
      <img class="Gall" src="https://picsum.photos/200/100"/>
      <img class="Gall" src="https://picsum.photos/200/200"/>
@@ -27,6 +28,8 @@
      <p class="Para1">Thing2</p>
      <p class="Para1">Thing3</p>
    </div>
+ </section>
+ <section class="Gallery2">
    <div class="Gall2">
      <img class="Gall" src="https://picsum.photos/200/400"/>
      <img class="Gall" src="https://picsum.photos/200/500"/>
